# video2process

./: .gitignore  README.md  pyproject.toml
prompts/analyze/: chat.txt  header.txt  logs.txt
prompts/reflection/: header.txt
video2process/: ingest.py
