[tool.poetry]
name = "video2process"
version = "0.1.0"
description = ""
authors = ["Boris Tvaroska <boris@tvaroska.sk>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
promptgit = "^0.2.0"
vertexai = "^1.70.0"
pydantic = "^2.9.2"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
